Cycles Bake: world space location affects object space normal pass #41044

Closed
opened 2014-07-12 14:50:47 +02:00 by Manfred Giebler · 14 comments

System Information
Reproduced on Debian GNU/Linux 7.5 (wheezy) 64bit, Microsoft Windows XP (32bit, latest SP), multiple hardware configurations using Nvidia, AMD or Intel graphics.

Blender Version
Broken: current 2.71 release build (9337574) from download.blender.org, latest 2.71 BuildBot build (5e3e095).
Worked: unknown.

Short description of error
The location of the active object in world space affects the result of Cycles' object space normal bake pass. The bake result is correct only if the object is at location (0, 0, 0) during the bake. For any other location the bake produces normal maps that bear no resemblance to the sampled geometry.

Exact steps for others to reproduce the error
Open the attached objspacebug.blend file and click the bake button.

objspacebug.blend

Although the seven objects in the scene re-use the same mesh geometry datablock with no modifiers attached, each bake turns out different. Only the object in the center produces a usable object space normal map.

objspacebug.png

**System Information** Reproduced on Debian GNU/Linux 7.5 (wheezy) 64bit, Microsoft Windows XP (32bit, latest SP), multiple hardware configurations using Nvidia, AMD or Intel graphics. **Blender Version** Broken: current 2.71 release build (9337574) from download.blender.org, latest 2.71 BuildBot build (5e3e095). Worked: unknown. **Short description of error** The location of the active object in world space affects the result of Cycles' object space normal bake pass. The bake result is correct only if the object is at location (0, 0, 0) during the bake. For any other location the bake produces normal maps that bear no resemblance to the sampled geometry. **Exact steps for others to reproduce the error** Open the attached objspacebug.blend file and click the bake button. [objspacebug.blend](https://archive.blender.org/developer/F97568/objspacebug.blend) Although the seven objects in the scene re-use the same mesh geometry datablock with no modifiers attached, each bake turns out different. Only the object in the center produces a usable object space normal map. ![objspacebug.png](https://archive.blender.org/developer/F97569/objspacebug.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @mgiebler

Added subscriber: @mgiebler
Dalai Felinto was assigned by Thomas Dinges 2014-07-12 15:51:21 +02:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Added subscriber: @MadMinstrel

Added subscriber: @MadMinstrel

Added subscriber: @BartekMoniewski

Added subscriber: @BartekMoniewski

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @michaliszissiou

Added subscriber: @michaliszissiou

You don't have to place it in the center.
Apply location.
A bug.
Reminds me the other, fixed bug. to bake tangent maps correctly without applying rotation

You don't have to place it in the center. Apply location. A bug. Reminds me the other, fixed bug. to bake tangent maps correctly without applying rotation

That's strange, but confirmed indeed. Hm now that I think of I was only testing object normal map with 'Selected to Active' (which is working fine by the way), so no wonder this bug is present.

That's strange, but confirmed indeed. Hm now that I think of I was only testing object normal map with 'Selected to Active' (which is working fine by the way), so no wonder this bug is present.

"Selected to Active" doesn't work either unless the active object is at location (0, 0, 0).

"Selected to Active" doesn't work either unless the active object is at location (0, 0, 0).

This issue was referenced by 50d30148b6

This issue was referenced by 50d30148b63212d4249b6e2aa97a5802557a9b6e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 50d30148b6.

Closed by commit 50d30148b6.

Fixed now, thanks for the report.

Fixed now, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41044
No description provided.