Fix T41044 Cycles Bake: world space location affects object space normal pass